welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:3: error: Missing closing brace `}' assumed here
if (isFacingTraila()==true)
^SlugSnail:6: error: expected class or object definition
def isFacingTraila():Boolean = {
^SlugSnail:8: error: Missing closing brace `}' assumed here
var couleuravant: Boolean = true;
^SlugSnail:9: error: expected class or object definition
if(!estFaceMur){
^SlugSnail:29: error: Missing closing brace `}' assumed here
var couleuravant: Boolean = true;
^SlugSnail:30: error: expected class or object definition
if(!estFaceMur){
^